// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render horizontal line with "OR" and color red  1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.emotion-1 {
  width: 100%;
  border-top: 1px solid red;
}

.emotion-2 {
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  color: black;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    color="red"
  />
  <div
    className="emotion-2"
  >
    OR
  </div>
  <div
    className="emotion-1"
    color="red"
  />
</div>
`;

exports[`should render horizontal line with "OR" and color with default color black 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.emotion-1 {
  width: 100%;
  border-top: 1px solid black;
}

.emotion-2 {
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  color: black;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    color="black"
  />
  <div
    className="emotion-2"
  >
    OR
  </div>
  <div
    className="emotion-1"
    color="black"
  />
</div>
`;
